# Dragon-world

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
bridges/deerflow/: CONTRACT.md
bridges/paperclip/: CONTRACT.md
crates/command-parser/: Cargo.toml
crates/event-store/: Cargo.toml
crates/snapshot/: Cargo.toml
crates/world-core/: Cargo.toml
crates/world-loader/: Cargo.toml
docs/: 00_product_north_star.md  01_system_architecture.md  02_module_boundaries.md  03_interfaces_and_contracts.md  04_memory_and_state_model.md  05_action_plane_selection.md  06_phase1_execution_plan.md  07_windows_execution_runner.md  AGENTS.md  ARCHITECTURE.md  CLI_EXAMPLES.md  MEMORY_NOTES.md  OBJECTS.md  PHASE2_BRIDGE_FREEZE.md  ROOMS.md  WORLD_GUIDE.md  dragon_system_boot_protocol.md
docs/adr/: ADR-0001-monorepo-boundary.md  (+6 more)
examples/: demo_transcript.md
handoff/: latest_boot_packet.md
proposals/: README.md
protocol_examples/: forge_request.json  memory_update_proposal.json  patch_proposal_rejected.json  runtime_failure.json  talk_failure.json  talk_success.json
runtime/: module_registry.yaml  open_questions.md  system_state.yaml  task_graph.yaml
scripts/: bootstrap_context.py  check_boot_integrity.py  generate_demo_transcript.py  generate_handoff.py  generate_stub_dialogues.py  test_bootstrap.py  update_state.py  validate_seed_world.py
specs/: action_schema.json  event_schema.json  execution_result_schema.json  provider_schema.json  skill_schema.json
tests/: phase1_kernel.rs
(+95 files in other folders)
